--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,8 +4,90 @@ body {
   margin: 0;
   font-family: $font-family;
   background-color: $accent-color;
+  color: #333;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.app-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100vh;
+  max-width: 900px;
+}
+
+.app-grid {
+  display: grid;
+  grid-template-columns: 0.85fr 1.25fr;
+  grid-gap: 20px;
+  width: 100%;
+  max-height: 80vh;
+}
+
+.app-grid-item {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  max-height: 80vh;
+  padding: 6px;
+}
+
+.app-side {
+  justify-content: center;
+}
+
+.section-heading {
+  font-size: 28px;
+  font-weight: 600;
+  color: #000;
+  padding: 0;
+  margin: 0;
+}
+
+.section-paragraph {
+  font-size: 18px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  margin-top: 0.4rem;
+}
+
+.section-block {
+  background-color: #fff;
+  box-shadow: 0 0 0 2px #0000001a;
+  padding: 18px 24px;
+  width: 100%;
+  margin-bottom: 1rem;
+  opacity: 0.45;
+  transition: opacity 250ms;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    opacity: 1;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.block-heading {
+  font-size: 26px;
+  font-weight: 600;
+  color: #000;
+  padding: 0;
+  margin: 0;
+}
+
+.block-paragraph {
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  margin-top: 0.5rem;
 }
