--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,12 +67,56 @@ body {
   cursor: pointer;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &.input-block {
     opacity: 1;
   }
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  &.input-block {
+    cursor: unset;
+  }
+}
+
+.section-divider {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 2rem 0;
+}
+
+.section-step {
+  margin: 0;
+  padding: 0;
+}
+
+.section-progressbar {
+  margin-top: 0.5rem;
+}
+
+.section-links {
+  width: 100%;
+  text-align: center;
+
+  button {
+    cursor: pointer;
+    color: #777;
+    background-color: #0000000d;
+    display: block;
+    padding: 6px;
+    border-radius: 5px;
+    border: 0;
+    outline: 0;
+    width: 100%;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: #000;
+    }
   }
 }
 
@@ -82,6 +126,17 @@ body {
   color: #000;
   padding: 0;
   margin: 0;
+
+  &.monospace {
+    font-family: monospace;
+  }
+}
+
+.block-headline {
+  font-size: 13px;
+  color: #777;
+  margin: 0;
+  padding: 0;
 }
 
 .block-paragraph {
@@ -90,4 +145,26 @@ body {
   padding: 0;
   margin: 0;
   margin-top: 0.5rem;
+}
+
+.block-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.block-form {
+  width: 100%;
+  margin-top: 0.5rem;
+}
+
+.block-label {
+  margin-left: 0.5rem;
+}
+
+.block-referencelink {
+  color: #333;
+}
+
+.monospace {
+  font-family: monospace;
 }
