Fix the reference link

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -162,7 +162,9 @@ body {
 }
 
 .block-referencelink {
-  color: #333;
+  color: #555;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 .monospace {
