Add a button for next step

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -119,6 +119,11 @@ body {
       color: #000;
     }
   }
+
+  .primary {
+    margin-top: 0.5rem;
+    background-color: #cff9cf;
+  }
 }
 
 .block-heading {
