--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -12,3 +12,20 @@
   padding: 0;
   margin: 0.4rem 0 0;
 }
+
+.SidebarProgressbar_divider {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1.5rem 0;
+}
+
+.SidebarProgressbar_paragraph {
+  margin: 0;
+  padding: 0;
+}
+
+.SidebarProgressbar_progressbar {
+  margin-top: 0.5rem;
+  width: 100%;
+}
