--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -29,3 +29,26 @@
   margin-top: 0.5rem;
   width: 100%;
 }
+
+.SidebarButtons_button {
+  cursor: pointer;
+  color: #777;
+  background-color: rgba(0, 0, 0, 0.05);
+  display: block;
+  padding: 6px;
+  border-radius: 5px;
+  border: 0;
+  outline: 0;
+  width: 100%;
+  margin-bottom: 0.5rem;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: #000;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
