--- a/src/styles/Option.module.scss
+++ b/src/styles/Option.module.scss
@@ -63,8 +63,14 @@
 .Option_checkboxcontainer {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .Option_checkbox {
   width: 40px;
+  height: 40px;
+}
+
+.Option_select {
+  margin-top: 0.5rem;
 }
