feat(): Create ending component

--- a/src/styles/Option.module.scss
+++ b/src/styles/Option.module.scss
@@ -74,3 +74,10 @@
 .Option_select {
   margin-top: 0.5rem;
 }
+
+.Option_divider {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1.5rem 0;
+}
