feat(): Create download button

--- a/src/styles/Option.module.scss
+++ b/src/styles/Option.module.scss
@@ -75,9 +75,6 @@
   margin-top: 0.5rem;
 }
 
-.Option_divider {
-  width: 100%;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1.5rem 0;
+.Option_downloadbutton {
+  text-decoration: none;
 }
