--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -52,3 +52,31 @@
     margin-bottom: 0;
   }
 }
+
+.SidebarList_list {
+  list-style: none;
+  margin: 0;
+  margin-top: 1.5rem;
+  padding: 0;
+
+  li {
+    opacity: 0.5;
+    margin-bottom: 0.25rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &:before {
+      content: "  ";
+    }
+  }
+}
+
+.SidebarList_done {
+  opacity: 1 !important;
+
+  &:before {
+    content: "\2713\0020" !important;
+  }
+}
