--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -40,7 +40,6 @@
   border: 0;
   outline: 0;
   width: 100%;
-  margin-bottom: 0.5rem;
 
   &:hover,
   &:active,
@@ -51,6 +50,12 @@
   &:last-child {
     margin-bottom: 0;
   }
+}
+
+.SidebarButtons_buttonlist {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
 }
 
 .SidebarList_list {
